# roomac_ros

./: .clang-format  .dockerignore  .gitignore  Dockerfile  Dockerfile.laptop  Dockerfile.rpi  README.md
roomac/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  roomac.repos  roomac_simulation.repos
roomac/cfg/: AutonomousMissionSettings.cfg  PickAndBringManagerSettings.cfg
roomac/config/: autonomous_mission_config.yaml
roomac/dev_utils/: dev_external_laptop_test_arm_precision.launch  external_laptop_test_arm_precision.launch  play_nav_rviz.launch  record_nav_rviz.launch
roomac/launch/: all_hardware.launch  autonomous_mission.launch  external_laptop_artag.launch  external_laptop_nav_picking.launch  firmware_configurations.launch  kinect.launch  kinect_calibration.launch  laptop_localization_autonomy.launch  laptop_mapping_manual.launch  laptop_nav_picking.launch  pick_and_bring_manager.launch  raspberry.launch  raspberry_mapping_manual.launch  ros_mobile.launch  slam.launch  slam_only_raspberry.launch  slam_raspberry.launch
roomac/rviz/: roomac_slam.rviz
roomac/scripts/: autonomous_mission.py  joy_controller_simple.py  pick_and_bring_manager_node.py  pose_publisher.py  ros_mobile_bridge.py  wheel_joint_publisher.py  wheel_joint_publisher_node.py
roomac/startup/: roomac_startup.service  roomac_startup.sh
roomac/test/: pick_and_bring.test.launch  pick_and_bring.test.py
roomac/urdf/: base_kinect_calibration.urdf.xacro
roomac_ar_tag/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
roomac_ar_tag/config/: artag_odom_publisher_config.yaml  filtration_artag_config.yaml  fusion_camera_object.yaml  fusion_camera_robot.yaml  parallel_publisher_artag_config.yaml  shoulder_bundle.xml
roomac_ar_tag/dev_utils/: calc_detection_accuracy.py  dev_calc_detection_accuracy.py
roomac_ar_tag/filtration_test/: filtration_test.py  fusion.yaml
roomac_ar_tag/launch/: ar_tag.launch  bundle_ar_tag.launch  filtration.launch  roomac_ar_tag.launch  rviz_ar_tag.launch  tf_publishing.launch
roomac_ar_tag/rviz/: roomac_kinect_ar_tag.rviz
roomac_ar_tag/scripts/: artag_odom_parallel_publisher.py  artag_odom_publisher.py  artag_odom_publisher_node.py  artag_parallel_tf_publisher_node.py  artag_parallel_transform_publisher.py  marker_odom_parallel_publisher.py  marker_odom_publisher.py  tf_publisher.py  tf_publisher_parallel.py
roomac_ar_tag/test/: robot_pose_detection.test.launch  robot_pose_detection.test.py
roomac_arm/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
roomac_arm/cfg/: ArmController.cfg
roomac_arm/config/: arm_controller_config.yaml  gripper_controller_config.yaml  servo_controller_config.yaml
roomac_arm/dev_utils/: calc_limits.py  dev_arm_controller_follow_trajectory_test.launch  dev_calc_limits.py  dev_roomac_arm_precision_test.xacro  record_servo_values.launch
roomac_arm/launch/: arm_controller.launch  arm_controller_follow_trajectory_test.launch  arm_controller_hardware.launch  arm_controller_joy_test.launch  arm_controller_sim.launch  arm_follow_trajectory_controller.launch  arm_joint_state_controller.launch  arm_moveit.launch  arm_object_pick.launch  demo_arm_control_gui.launch  demo_arm_hardware.launch  fake_joint_state_publisher.launch  roomac_arm.launch  sequnece_arm_controller.launch  serial.launch  servo_joint_state_publisher.launch
roomac_arm/rviz/: arm.rviz  test_controller.rviz
roomac_arm/scripts/: arm_controller.py  arm_controller_joint_trajectory.py  arm_joint_state_controller.py  arm_joint_state_controller_node.py  arm_joint_trajectory_controller.py  arm_joint_trajectory_controller_node.py  gripper_controller.py  gripper_joint_trajectory_controller.py  gripper_joint_trajectory_controller_node.py  joint_trajectory_controller.py  position_saver.py  positions_saved.yaml  servo.py  servo_controller.py  servo_joint_state_publisher_node.py  utils.py
roomac_arm/test/: arm_stub.py
roomac_arm/urdf/: arm.urdf.xacro  test2.urdf
roomac_autonomous_manipulation/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
roomac_autonomous_manipulation/cfg/: ObjectDetection.cfg  PickCorrection.cfg  PickManagerSettings.cfg
roomac_autonomous_manipulation/config/: object_detection_config.yaml  pick_correction_config.yaml  picking_object_manager.yaml  picking_object_manager_config.yaml  picking_object_manager_config_real.yaml  picking_object_manager_config_simulation.yaml
roomac_autonomous_manipulation/dev_utils/: dev_test_arm_precision_manager.py  test_arm_precision_manager.py
roomac_autonomous_manipulation/launch/: bag_picking_correction.launch  object_detection.launch  picking_correction.launch  picking_object_manager.launch  real_ar_object_detection.launch  real_picking.launch  roomac_autonomous_manipulation.launch
roomac_autonomous_manipulation/rviz/: object_detection.rviz  picking_correction.rviz  roomac_kinect_ar_tag.rviz
roomac_autonomous_manipulation/scripts/: add_table_body_collision_to_scene.py  go_to_goal_test.py  grasp_test.py  picking_object_controller.py  picking_object_manager.py  picking_object_manager_moveit.py  picking_object_manager_node.py  real_pick_object.py  real_picking_object_manager.py  simulation_pick_object.py  simulation_picking_object_manager.py  test_arm_precision_manager.py  utils.py
roomac_base/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
roomac_bringup/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
roomac_cartographer/: CHANGELOG.rst  CMakeLists.txt  package.xml
roomac_description/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
roomac_kinect/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
roomac_move_base/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
roomac_msgs/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
roomac_rtabmap/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
roomac_sensor_fusion/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
roomac_simulation/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
roomac_utils/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.py
(+477 files in other folders)
