<?xml version="1.0"?>
<package format="2">
  <name>roomac_ar_tag</name>
  <version>1.12.16</version>
  <description>The roomac_ar_tag package</description>

  <author email="macorobots@gmail.com">Maciej Stępień</author>
  <maintainer email="macorobots@gmail.com">Maciej Stępień</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>

  <exec_depend>ar_track_alvar</exec_depend>

  <test_depend>rostest</test_depend>
  <test_depend>roomac_description</test_depend>
  <test_depend>rgbd_launch</test_depend>
</package>