<?xml version="1.0"?>
<package format="2">
  <name>roomac_arm</name>
  <version>1.13.2</version>
  <description>The roomac_arm package</description>

  <author email="macorobots@gmail.com">Maciej Stępień</author>
  <maintainer email="macorobots@gmail.com">Maciej Stępień</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>dynamic_reconfigure</depend>

  <exec_depend>rospy</exec_depend>

  <exec_depend>rosserial_python</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>roomac_kinect</exec_depend>

  <exec_depend>python-numpy</exec_depend>
</package>