<?xml version="1.0"?>
<package format="2">
  <name>roomac_autonomous_manipulation</name>
  <version>1.12.14</version>
  <description>The roomac_autonomous_manipulation package</description>

  <author email="macorobots@gmail.com">Maciej Stępień</author>
  <maintainer email="macorobots@gmail.com">Maciej Stępień</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>dynamic_reconfigure</depend>

  <depend>roscpp</depend>
  <exec_depend>rospy</exec_depend>

  <depend>roomac_msgs</depend>

  <test_depend>rostest</test_depend>
</package>