<?xml version="1.0"?>
<package format="2">
  <name>roomac_base</name>
  <version>1.12.15</version>
  <description>The roomac_base package</description>

  <author email="macorobots@gmail.com">Maciej Stępień</author>
  <maintainer email="macorobots@gmail.com">Maciej Stępień</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>joy</exec_depend>
  <exec_depend>rosserial_python</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>
</package>