<?xml version="1.0"?>
<package format="2">
  <name>roomac_description</name>
  <version>1.12.15</version>
  <description>The roomac_description package</description>

  <!-- It was based on package generated using fusion2urdf package (https://github.com/syuntoku14/fusion2urdf) -->
  <author email="macorobots@gmail.com">Maciej Stępień</author>
  <maintainer email="macorobots@gmail.com">Maciej Stępień</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>effort_controllers</exec_depend>

  <!-- In case of using GripperCommand -->
  <!-- <exec_depend>gripper_action_controller</exec_depend> -->
</package>