<?xml version="1.0"?>
<package format="2">
  <name>roomac_kinect</name>
  <version>1.12.5</version>
  <description>The roomac_kinect package</description>

  <author email="macorobots@gmail.com">Maciej Stępień</author>
  <maintainer email="macorobots@gmail.com">Maciej Stępień</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>freenect_launch</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <!-- <exec_depend>camera_pose_calibration</exec_depend> quite old, not present in melodic, isn't actually used -->
</package>