<?xml version="1.0"?>
<package format="2">
  <name>roomac_move_base</name>
  <version>1.12.16</version>
  <description>The roomac_move_base package</description>

  <author email="macorobots@gmail.com">Maciej Stępień</author>
  <maintainer email="macorobots@gmail.com">Maciej Stępień</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>move_base</exec_depend>
  <exec_depend>global_planner</exec_depend>
  <exec_depend>spatio_temporal_voxel_layer</exec_depend>
  <exec_depend>teb_local_planner</exec_depend>
</package>