<?xml version="1.0"?>
<package format="2">
  <name>roomac_msgs</name>
  <version>1.4.1</version>
  <description>The roomac_msgs package</description>

  <maintainer email="roomac@todo.todo">roomac</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib_msgs</build_depend>
  <exec_depend>actionlib_msgs</exec_depend>

  <export>
  </export>
</package>
