<?xml version="1.0"?>
<package format="2">
  <name>roomac_rtabmap</name>
  <version>1.12.3</version>
  <description>The roomac_rtabmap package</description>

  <author email="macorobots@gmail.com">Maciej Stępień</author>
  <maintainer email="macorobots@gmail.com">Maciej Stępień</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>roomac_kinect</exec_depend>
  <exec_depend>rtabmap_ros</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>pointcloud_to_laserscan</exec_depend>
</package>