<?xml version="1.0"?>
<package format="2">
  <name>roomac_rtabmap</name>
  <version>1.12.15</version>
  <description>The roomac_rtabmap package</description>

  <author email="macorobots@gmail.com">Maciej Stępień</author>
  <maintainer email="macorobots@gmail.com">Maciej Stępień</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>roomac_kinect</exec_depend>
  <exec_depend>rtabmap_ros</exec_depend>
  <exec_depend>pointcloud_to_laserscan</exec_depend>
</package>