<?xml version="1.0"?>
<package format="2">
  <name>roomac_simulation</name>
  <version>1.12.4</version>
  <description>The roomac_simulation package</description>

  <author email="macorobots@gmail.com">Maciej Stępień</author>
  <maintainer email="macorobots@gmail.com">Maciej Stępień</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>roomac_ar_tag</exec_depend>
  <exec_depend>roomac_autonomous_manipulation</exec_depend>
  <exec_depend>roomac_description</exec_depend>
  <exec_depend>roomac_move_base</exec_depend>
  <exec_depend>roomac_moveit</exec_depend>
  <exec_depend>roomac_msgs</exec_depend>
  <exec_depend>roomac_rtabmap</exec_depend>
  <exec_depend>roomac_sensor_fusion</exec_depend>
  <exec_depend>roomac_utils</exec_depend>

  <exec_depend>gazebo_ros</exec_depend>
</package>