<?xml version="1.0"?>
<package format="2">
  <name>roomac_simulation</name>
  <version>1.13.1</version>
  <description>The roomac_simulation package</description>

  <author email="macorobots@gmail.com">Maciej Stępień</author>
  <maintainer email="macorobots@gmail.com">Maciej Stępień</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>roomac_ar_tag</exec_depend>
  <exec_depend>roomac_autonomous_manipulation</exec_depend>
  <exec_depend>roomac_description</exec_depend>
  <exec_depend>roomac_move_base</exec_depend>
  <exec_depend>roomac_moveit</exec_depend>
  <exec_depend>roomac_msgs</exec_depend>
  <exec_depend>roomac_rtabmap</exec_depend>
  <exec_depend>roomac_sensor_fusion</exec_depend>
  <exec_depend>roomac_utils</exec_depend>
  <exec_depend>roomac_bringup</exec_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>aws_robomaker_small_house_world</exec_depend>
  <exec_depend>gazebo_grasp_plugin</exec_depend>
  <exec_depend>roboticsgroup_upatras_gazebo_plugins</exec_depend>
</package>