<?xml version="1.0"?>
<package format="2">
  <name>roomac_utils</name>
  <version>1.12.16</version>
  <description>The roomac_utils package</description>

  <author email="macorobots@gmail.com">Maciej Stępień</author>
  <maintainer email="macorobots@gmail.com">Maciej Stępień</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
</package>